--- a/hyeonjeong/index.html
+++ b/hyeonjeong/index.html
@@ -9,83 +9,74 @@
     <title>Document</title>
     <script>
         $(document).ready(function () {
-            $("i").transition({rotate: '45deg'});
+
         });
     </script>
 </head>
 
 <body>
     <div class="footer-category-group">
-        <ul>
-            <li>
-                <div class="footer_category_group_g1">
-                    <div class="footer-category" id="footer-category-n1">
-                        <a href="#">
-                            <i class="fas fa-school fa-4x"></i>
-                            <div class="txt">교육</div>
-                        </a>
-                    </div>
-                    <div class="footer-category" id="footer-category-n2">
-                        <a href="#">
-                            <i class="fas fa-industry fa-4x"></i>
-                            <div class="txt">경제/산업</div>
-                        </a>
-                    </div>
-                    <div class="footer-category" id="footer-category-n3">
-                        <a href="#">
-                            <i class="fas fa-hands-helping fa-4x"></i>
-                            <div class="txt">사회복지</div>
-                        </a>
-                    </div>
-                    <div class="footer-category" id="footer-category-n4">
-                        <a href="#">
-                            <i class="fas fa-medkit fa-4x"></i>
-                            <div class="txt">보건</div>
-                        </a>
-                    </div>
-                    <div class="footer-category" id="footer-category-n5">
-                        <a href="#">
-                            <i class="fas fa-plane-departure fa-4x"></i>
-                            <div class="txt">문화/관광</div>
-                        </a>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="footer_category_group_g2">
-                    <div class="footer-category" id="footer-category-n6">
-                        <a href="#">
-                            <i class="fas fa-city fa-4x"></i>
-                            <div class="txt">도시관리</div>
-                        </a>
-                    </div>
-                    <div class="footer-category" id="footer-category-n7">
-                        <a href="#">
-                            <i class="fas fa-car-side fa-4x"></i>
-                            <div class="txt">교통</div>
-                        </a>
-                    </div>
-                    <div class="footer-category" id="footer-category-n8">
-                        <a href="#">
-                            <i class="fas fa-leaf fa-4x"></i>
-                            <div class="txt">환경</div>
-                        </a>
-                    </div>
-                    <div class="footer-category" id="footer-category-n9">
-                        <a href="#">
-                            <i class="fas fa-flask fa-4x"></i>
-                            <div class="txt">과학기술</div>
-                        </a>
-                    </div>
-                    <div class="footer-category" id="footer-category-n10">
-                        <a href="#">
-                            <i class="fas fa-gavel fa-4x"></i>
-                            <div class="txt">법률</div>
-                        </a>
-                    </div>
-                </div>
-            </li>
-        </ul>
+        <!--       <div class="footer_category_group_g1">-->
+        <div class="footer-category" id="footer-category-n1">
+            <a href="#">
+                <i class="fas fa-school fa-4x"></i>
+                <div class="txt">교육</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n2">
+            <a href="#">
+                <i class="fas fa-industry fa-4x"></i>
+                <div class="txt">경제/산업</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n3">
+            <a href="#">
+                <i class="fas fa-hands-helping fa-4x"></i>
+                <div class="txt">사회복지</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n4">
+            <a href="#">
+                <i class="fas fa-medkit fa-4x"></i>
+                <div class="txt">보건</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n5">
+            <a href="#">
+                <i class="fas fa-plane-departure fa-4x"></i>
+                <div class="txt">문화/관광</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n6">
+            <a href="#">
+                <i class="fas fa-city fa-4x"></i>
+                <div class="txt">도시관리</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n7">
+            <a href="#">
+                <i class="fas fa-car-side fa-4x"></i>
+                <div class="txt">교통</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n8">
+            <a href="#">
+                <i class="fas fa-leaf fa-4x"></i>
+                <div class="txt">환경</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n9">
+            <a href="#">
+                <i class="fas fa-flask fa-4x"></i>
+                <div class="txt">과학기술</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n10">
+            <a href="#">
+                <i class="fas fa-gavel fa-4x"></i>
+                <div class="txt">법률</div>
+            </a>
+        </div>
 </body>
 
 </html>
