index 파일 주석 제거

--- a/hyeonjeong/index.html
+++ b/hyeonjeong/index.html
@@ -16,7 +16,6 @@
 
 <body>
     <div class="footer-category-group">
-        <!--       <div class="footer_category_group_g1">-->
         <div class="footer-category" id="footer-category-n1">
             <a href="#">
                 <i class="fas fa-school fa-4x"></i>
@@ -77,6 +76,7 @@
                 <div class="txt">법률</div>
             </a>
         </div>
+    </div>
 </body>
 
 </html>
