--- a/jsjs/register.html
+++ b/jsjs/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Data-Hub</title>
+    <title>Data-Hub 회원가입</title>
     <!--    부트스트랩사용-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!--    css링크-->
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="login-register.css">
     <style>
         @media screen and (max-width: 768px) {
             .alert-secondary {
                 top: 0px;
+                height: 100vh;
             }
         }
 
@@ -64,6 +65,7 @@
     </div>
 </container>
 <footer>
+
 </footer>
 </body>
 </html>
