--- a/jsjs/index.html
+++ b/jsjs/index.html
@@ -6,16 +6,16 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Data-Hub</title>
-    <!--    부트스트랩사용-->
+    <!--    BootStrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
             crossorigin="anonymous"></script>
-    <!--    폰트-->
+    <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <!--    폰트-->
+    <!--    Leon Sans Font-->
     <style>
         #logo {
             width: 100%;
@@ -37,7 +37,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.js"></script>
 
-    <!--    링크-->
+    <!--    CSS Link-->
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -57,7 +57,7 @@
          style="background-color: white!important; padding-top: 0;">
         <div class="container-fluid">
             <div id="logo" style="width: 270px; height: 55px; background-color: white; cursor: pointer;"
-                 onclick="location.href='http://naver.com'">
+                 onclick="location.href='index.html'">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -92,10 +92,6 @@
                         <a class="nav-link" href="#">데이터허브</a>
                     </li>
                 </ul>
-                <!--                <form class="d-flex">-->
-                <!--                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-                <!--                    <button class="btn btn-outline-success" type="submit">Search</button>-->
-                <!--                </form>-->
             </div>
         </div>
     </nav>
@@ -103,80 +99,96 @@
 </header>
 <container>
     <div id="main">
-        <div id="search_box">
-            <div class="input-group flex-nowrap">
-                <input type="text" class="form-control" placeholder="검색할 데이터를 입력해주세요!" aria-label="Username" aria-describedby="addon-wrapping">
-                <button type="button" class="btn btn-primary"><i class="fas fa-search fa-4x"></i></button>
+        <div class="input-group flex-nowrap">
+            <input type="text" class="form-control" placeholder="검색할 데이터 입력!" aria-label="Username"
+                   aria-describedby="addon-wrapping">
+            <button type="button" class="btn btn-primary"><i class="fas fa-search fa-3x"></i></button>
 
-            </div>
         </div>
-        <div id="category">
-            <div class="footer-category-group">
-                <div class="footer-category" id="footer-category-n1">
-                    <a href="#">
-                        <i class="fas fa-school fa-4x"></i>
-                        <div class="txt">교육</div>
-                    </a>
+        <!--    부스트랩 이동-->
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="footer-category" id="footer-category-n1">
+                        <a href="#">
+                            <i class="fas fa-school fa-4x"></i>
+                            <div class="txt">교육</div>
+                        </a>
+                    </div>
+                    <div class="footer-category" id="footer-category-n2">
+                        <a href="#">
+                            <i class="fas fa-industry fa-4x"></i>
+                            <div class="txt">경제/산업</div>
+                        </a>
+                    </div>
+                    <div class="footer-category" id="footer-category-n3">
+                        <a href="#">
+                            <i class="fas fa-hands-helping fa-4x"></i>
+                            <div class="txt">사회복지</div>
+                        </a>
+                    </div>
+                    <div class="footer-category" id="footer-category-n4">
+                        <a href="#">
+                            <i class="fas fa-medkit fa-4x"></i>
+                            <div class="txt">보건</div>
+                        </a>
+                    </div>
+                    <div class="footer-category" id="footer-category-n5">
+                        <a href="#">
+                            <i class="fas fa-plane-departure fa-4x"></i>
+                            <div class="txt">문화/관광</div>
+                        </a>
+                    </div>
                 </div>
-                <div class="footer-category" id="footer-category-n2">
-                    <a href="#">
-                        <i class="fas fa-industry fa-4x"></i>
-                        <div class="txt">경제/산업</div>
-                    </a>
-                </div>
-                <div class="footer-category" id="footer-category-n3">
-                    <a href="#">
-                        <i class="fas fa-hands-helping fa-4x"></i>
-                        <div class="txt">사회복지</div>
-                    </a>
-                </div>
-                <div class="footer-category" id="footer-category-n4">
-                    <a href="#">
-                        <i class="fas fa-medkit fa-4x"></i>
-                        <div class="txt">보건</div>
-                    </a>
-                </div>
-                <div class="footer-category" id="footer-category-n5">
-                    <a href="#">
-                        <i class="fas fa-plane-departure fa-4x"></i>
-                        <div class="txt">문화/관광</div>
-                    </a>
-                </div>
-                <div class="footer-category" id="footer-category-n6">
-                    <a href="#">
-                        <i class="fas fa-city fa-4x"></i>
-                        <div class="txt">도시관리</div>
-                    </a>
-                </div>
-                <div class="footer-category" id="footer-category-n7">
-                    <a href="#">
-                        <i class="fas fa-car-side fa-4x"></i>
-                        <div class="txt">교통</div>
-                    </a>
-                </div>
-                <div class="footer-category" id="footer-category-n8">
-                    <a href="#">
-                        <i class="fas fa-leaf fa-4x"></i>
-                        <div class="txt">환경</div>
-                    </a>
-                </div>
-                <div class="footer-category" id="footer-category-n9">
-                    <a href="#">
-                        <i class="fas fa-flask fa-4x"></i>
-                        <div class="txt">과학기술</div>
-                    </a>
-                </div>
-                <div class="footer-category" id="footer-category-n10">
-                    <a href="#">
-                        <i class="fas fa-gavel fa-4x"></i>
-                        <div class="txt">법률</div>
-                    </a>
+                <div class="carousel-item">
+                    <div class="footer-category" id="footer-category-n6">
+                        <a href="#">
+                            <i class="fas fa-city fa-4x"></i>
+                            <div class="txt">도시관리</div>
+                        </a>
+                    </div>
+                    <div class="footer-category" id="footer-category-n7">
+                        <a href="#">
+                            <i class="fas fa-car-side fa-4x"></i>
+                            <div class="txt">교통</div>
+                        </a>
+                    </div>
+                    <div class="footer-category" id="footer-category-n8">
+                        <a href="#">
+                            <i class="fas fa-leaf fa-4x"></i>
+                            <div class="txt">환경</div>
+                        </a>
+                    </div>
+                    <div class="footer-category" id="footer-category-n9">
+                        <a href="#">
+                            <i class="fas fa-flask fa-4x"></i>
+                            <div class="txt">과학기술</div>
+                        </a>
+                    </div>
+                    <div class="footer-category" id="footer-category-n10">
+                        <a href="#">
+                            <i class="fas fa-gavel fa-4x"></i>
+                            <div class="txt">법률</div>
+                        </a>
+                    </div>
                 </div>
             </div>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <i class="fas fa-arrow-left fa-4x" style="color: black"></i>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <i class="fas fa-arrow-right fa-4x" style="color: black"></i>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
+
+
 </container>
+<footer style="background-color: black;">
+    d
+</footer>
 <script src="js/leon.js"></script>
 <script src="js/util.js"></script>
 <script>
