--- a/jsjs/login.html
+++ b/jsjs/login.html
@@ -55,7 +55,7 @@
             </div>
             <div class="d-grid gap-2">
                 <button type="button" class="btn btn-outline-success">로그인</button>
-                <button type="button" class="btn btn-outline-danger">홈으로</button>
+                <button type="button" class="btn btn-outline-danger" onclick="location.href='index.html'">홈으로</button>
             </div>
         </div>
     </div>
