--- a/jsjs/register.html
+++ b/jsjs/register.html
@@ -59,7 +59,7 @@
             </div>
             <div class="d-grid gap-2 col-6 mx-auto">
                 <button class="btn btn-primary" type="button">가입하기</button>
-                <button class="btn btn-danger" type="button">돌아가기</button>
+                <button class="btn btn-danger" type="button" onclick="location.href='index.html'">돌아가기</button>
             </div>
         </div>
     </div>
