API 목록 파일(검색 조건 선택 추가)

--- a/hyeonjeong/api_list.html
+++ b/hyeonjeong/api_list.html
@@ -32,17 +32,167 @@
         </div>
         <div class="row">
             <strong class="search-result">
-                총 <span style="color: blue">1</span>개의 결과가 검색되었습니다.
+                총 <span>1</span>개의 결과가 검색되었습니다.
             </strong>
         </div>
         <div class="row">
             <h6><strong>검색 조건 선택</strong></h6>
             <div class="col-10">
-
+                <div class="wrap">
+                    <div class="condition">
+                        <div class="tit">카테고리</div>
+                        <div class="list">
+                            <ul>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">교육</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">경제/산업</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">사회복지</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">보건</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">문화관광</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">도시관리</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">교통</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">환경</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">과학기술</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">법률</label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="condition">
+                        <div class="tit">제공기관</div>
+                        <div class="list">
+                            <ul>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">공공기관</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">교육기관</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">교육행정기관</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">국가행정기관</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">위원회</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">입법기관</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">자치행정기관</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">헌법기관</label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="condition">
+                        <div class="tit">확장자</div>
+                        <div class="list">
+                            <ul>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">CSV</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">DOC</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">DOCX</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">HWP</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">JPG</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">JSON</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">MP4</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">PDF</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">SHP</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">TXT</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">XLS</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">XLSX</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">XML</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" value="">
+                                    <label for="">ZIP</label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
-            <h6>API 목록</h6>
+            <h6><strong>API 목록</strong></h6>
             <ul>
                 <li class="api-list">
                     <div class="api-title">제목</div>
