--- a/hyeonjeong/api_list.html
+++ b/hyeonjeong/api_list.html
@@ -37,11 +37,11 @@
         </div>
         <div class="row">
             <h6><strong>검색 조건 선택</strong></h6>
-            <div class="col-10">
+            <div class="col-12">
                 <div class="wrap">
                     <div class="condition">
-                        <div class="tit">카테고리</div>
-                        <div class="list">
+                        <div class="condition-tit">카테고리</div>
+                        <div class="condition-list">
                             <ul>
                                 <li>
                                     <input type="checkbox" value="">
@@ -87,8 +87,8 @@
                         </div>
                     </div>
                     <div class="condition">
-                        <div class="tit">제공기관</div>
-                        <div class="list">
+                        <div class="condition-tit">제공처</div>
+                        <div class="condition-list">
                             <ul>
                                 <li>
                                     <input type="checkbox" value="">
@@ -126,8 +126,8 @@
                         </div>
                     </div>
                     <div class="condition">
-                        <div class="tit">확장자</div>
-                        <div class="list">
+                        <div class="condition-tit">확장자</div>
+                        <div class="condition-list">
                             <ul>
                                 <li>
                                     <input type="checkbox" value="">
@@ -191,26 +191,27 @@
                 </div>
             </div>
         </div>
+
         <div class="row">
-            <h6><strong>API 목록</strong></h6>
-            <ul>
-                <li class="api-list">
-                    <div class="api-title">제목</div>
-                    <div class="api-subtitle">간단 설명</div>
-                </li>
-                <li class="api-list">
-                    <div class="api-title">제목</div>
-                    <div class="api-subtitle">간단 설명</div>
-                </li>
-                <li class="api-list">
-                    <div class="api-title">제목</div>
-                    <div class="api-subtitle">간단 설명</div>
-                </li>
-                <li class="api-list">
-                    <div class="api-title">제목</div>
-                    <div class="api-subtitle">간단 설명</div>
-                </li>
-            </ul>
+            <div class="col-12">
+                <h6><strong>API 목록</strong></h6>
+                <ul class="ul-wrapper">
+                    <li class="api-list">
+                        <div class="api-title">제목</div>
+                        <div class="api-content">간단 설명</div>
+                        <div class="api-info">
+                            <!-- api-data에 들어가있는 값은 '예시' -->
+                            <div class="api-info-title">제공처</div>
+                            <div class="api-data">대구시청</div>
+                            <div class="api-info-title">갱신일</div>
+                            <div class="api-data">2021.03.29</div>
+                            <div class="api-info-title">조회수</div>
+                            <div class="api-data">100</div>
+                            <button type="button" class="btn btn-primary">다운로드</button>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
