--- a/jsjs/index.html
+++ b/jsjs/index.html
@@ -34,7 +34,7 @@
 
         @media screen and (max-width: 768px) {
             #category_main {
-                margin-top: 0px!important;
+                margin-top: 0px !important;
             }
         }
 
@@ -48,7 +48,6 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div class="container">
 <header>
     <ul class="nav justify-content-end">
         <li class="nav-item">
@@ -105,84 +104,79 @@
     </nav>
 
 </header>
-<section>
-    <div id="main">
-        <div class="input-group flex-nowrap">
-            <input type="text" class="form-control" placeholder="검색할 데이터 입력!" aria-label="Username"
-                   aria-describedby="addon-wrapping">
-            <button type="button" class="btn btn-primary"><i class="fas fa-search fa-3x"></i></button>
+<div class="container">
+    <div class="input-group flex-nowrap" id="main">
+        <input type="text" class="form-control" placeholder="검색할 데이터 입력!" aria-label="Username"
+               aria-describedby="addon-wrapping">
+        <button type="button" class="btn btn-primary"><i class="fas fa-search fa-3x"></i></button>
+    </div>
+    <!--    부스트랩 이동-->
+    <div id="category_main">
+        <div class="footer-category" id="footer-category-n1">
+            <a href="#">
+                <i class="fas fa-school fa-4x"></i>
+                <div class="txt">교육</div>
+            </a>
         </div>
-        <!--    부스트랩 이동-->
-        <div id="category_main">
-            <div class="footer-category" id="footer-category-n1">
-                <a href="#">
-                    <i class="fas fa-school fa-4x"></i>
-                    <div class="txt">교육</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n2">
-                <a href="#">
-                    <i class="fas fa-industry fa-4x"></i>
-                    <div class="txt">경제/산업</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n3">
-                <a href="#">
-                    <i class="fas fa-hands-helping fa-4x"></i>
-                    <div class="txt">사회복지</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n4">
-                <a href="#">
-                    <i class="fas fa-medkit fa-4x"></i>
-                    <div class="txt">보건</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n5">
-                <a href="#">
-                    <i class="fas fa-plane-departure fa-4x"></i>
-                    <div class="txt">문화/관광</div>
-                </a>
-            </div>
-            <!--            두번째줄-->
-            <div class="footer-category" id="footer-category-n6">
-                <a href="#">
-                    <i class="fas fa-city fa-4x"></i>
-                    <div class="txt">도시관리</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n7">
-                <a href="#">
-                    <i class="fas fa-car-side fa-4x"></i>
-                    <div class="txt">교통</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n8">
-                <a href="#">
-                    <i class="fas fa-leaf fa-4x"></i>
-                    <div class="txt">환경</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n9">
-                <a href="#">
-                    <i class="fas fa-flask fa-4x"></i>
-                    <div class="txt">과학기술</div>
-                </a>
-            </div>
-            <div class="footer-category" id="footer-category-n10">
-                <a href="#">
-                    <i class="fas fa-gavel fa-4x"></i>
-                    <div class="txt">법률</div>
-                </a>
-            </div>
+        <div class="footer-category" id="footer-category-n2">
+            <a href="#">
+                <i class="fas fa-industry fa-4x"></i>
+                <div class="txt">경제/산업</div>
+            </a>
         </div>
-
+        <div class="footer-category" id="footer-category-n3">
+            <a href="#">
+                <i class="fas fa-hands-helping fa-4x"></i>
+                <div class="txt">사회복지</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n4">
+            <a href="#">
+                <i class="fas fa-medkit fa-4x"></i>
+                <div class="txt">보건</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n5">
+            <a href="#">
+                <i class="fas fa-plane-departure fa-4x"></i>
+                <div class="txt">문화/관광</div>
+            </a>
+        </div>
+        <!--            두번째줄-->
+        <div class="footer-category" id="footer-category-n6">
+            <a href="#">
+                <i class="fas fa-city fa-4x"></i>
+                <div class="txt">도시관리</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n7">
+            <a href="#">
+                <i class="fas fa-car-side fa-4x"></i>
+                <div class="txt">교통</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n8">
+            <a href="#">
+                <i class="fas fa-leaf fa-4x"></i>
+                <div class="txt">환경</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n9">
+            <a href="#">
+                <i class="fas fa-flask fa-4x"></i>
+                <div class="txt">과학기술</div>
+            </a>
+        </div>
+        <div class="footer-category" id="footer-category-n10">
+            <a href="#">
+                <i class="fas fa-gavel fa-4x"></i>
+                <div class="txt">법률</div>
+            </a>
+        </div>
     </div>
 
-
-
-</section>
 </div>
+
 <!--<footer style="background-color: black;">-->
 <!--    d-->
 <!--</footer>-->
