--- a/hyeonjeong/header.html
+++ b/hyeonjeong/header.html
@@ -39,6 +39,7 @@
 
     <!--    CSS Link-->
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/api_list.css">
 </head>
 <body>
 <header>
