--- a/hyeonjeong/api_list.html
+++ b/hyeonjeong/api_list.html
@@ -16,169 +16,33 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <!--    Leon Sans Font-->
-    <style>
-        #logo {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            outline: 0;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            /*cursor: move;*/
-        }
-
-        /*.dg{*/
-        /*    display: none;*/
-        /*}*/
-    </style>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.js"></script>
-
+    
     <!--    CSS Link-->
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/api_list.css">
 </head>
 
 <body>
-    <header>
-        <ul class="nav justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="login.html">사이트맵</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="login.html">로그인</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="register.html">회원가입</a>
-            </li>
-        </ul>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light"
-            style="background-color: white!important; padding-top: 0;">
-            <div class="container-fluid">
-                <div id="logo" style="width: 270px; height: 55px; background-color: white; cursor: pointer;"
-                    onclick="location.href='index.html'">
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                API
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="api_list.html">API 목록 및 조회</a></li>
-                                <li><a class="dropdown-item" href="#">API 생성</a></li>
-                                <li><a class="dropdown-item" href="#">API 관리</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                데이터셋
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">데이터 목록 및 조회</a></li>
-                                <li><a class="dropdown-item" href="#">데이터 등록 및 관리</a></li>
-                                <li><a class="dropdown-item" href="#">데이터 요청</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">데이터허브</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-    </header>
-
-    <script src="js/leon.js"></script>
-    <script src="js/util.js"></script>
-    <script>
-        let leon, controll;
-
-        function init() {
-            generateCanvas();
-
-            controll = {
-                color: {},
-                roundCap: true,
-                multiply: true,
-
-                drawing: () => {
-                    let i, total = leon.drawing.length;
-                    for (i = 0; i < total; i++) {
-                        TweenMax.killTweensOf(leon.drawing[i]);
-                        TweenMax.fromTo(leon.drawing[i], 2, {
-                            value: 0
-                        }, {
-                            value: 1,
-                            ease: Cubic.easeOut
-                        });
-                    }
-                }
-
-            };
-
-
-            leon = new LeonSans({
-                text: 'DataPortal',
-                color: ['#000000'],
-                size: 53,
-                weight: 818,
-
-
-            });
-
-
-            requestAnimationFrame(animate);
-            controll.drawing(0);
-
-        }
-
-
-        function animate(t) {
-            requestAnimationFrame(animate);
-
-            ctx.clearRect(0, 0, sw, sh);
-
-            const x = (sw - leon.rect.w) / 2;
-            const y = (sh - leon.rect.h) / 2;
-            leon.position(x, y);
-
-            leon.drawColorful(ctx);
-        }
-
-        window.onload = () => {
-            init();
-        };
-    </script>
     <div class="container">
         <div class="row">
             <div class="col-11">
                 <div class="col-12">
-                    <h4 class="big-tit"><strong>API목록 및 조회</strong></h4>
+                     <!-- API-search(input_box) -->
                     <div class="row">
+                        <h4 class="big-tit page-title"><strong>| API목록 및 조회 |</strong></h4>
                         <div class="api-search">
                             <input type="search" class="form-control" placeholder="무슨 API를 사용하실건가요?">
                             <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
                         </div>
-
                     </div>
+                    
+                    <!-- API-result(number) -->
                     <div class="row">
                         <strong class="search-result">
                             총 <span>1</span>개의 결과가 검색되었습니다.
                         </strong>
                     </div>
+
+                    <!-- API-search(condition) -->
                     <div class="row">
                         <h6 class="big-tit"><strong>검색 조건 선택</strong></h6>
                         <div class="condition col-4">
@@ -331,14 +195,13 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- API-result(list) -->
                     <div class="row">
                         <h6 class="big-tit"><strong>API 목록</strong></h6>
-                        <div>
-
-                        </div>
                         <ul class="ul-wrapper">
                             <li class="api-list">
-                                <div class="api-title">제목</div>
+                                <a href="#"><div class="api-title">제목</div></a>
                                 <div class="api-content">간단 설명</div>
                                 <div class="d-flex justify-content-start">
                                     <!-- api-data에 들어가있는 값은 '예시' -->
@@ -354,7 +217,7 @@
                                         <span class="api-info-title">조회수</span>
                                         <span class="api-data">100</span>
                                     </div>
-                                    <button type="button" class="btn btn-primary">다운로드</button>
+                                    <button type="button" class="btn btn-primary downbutt">다운로드</button>
                                 </div>
                             </li>
                         </ul>
