--- a/jsjs/register.html
+++ b/jsjs/register.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!--    CSS Link-->
-    <link rel="stylesheet" href="login-register.css">
+    <link rel="stylesheet" href="css/login-register.css">
     <style>
         @media screen and (max-width: 768px) {
             .alert-secondary {
@@ -32,37 +32,42 @@
 <header>
 
 </header>
-<container>
-    <div class="alert alert-secondary" role="alert">
-        <h2>회원가입</h2>
-        <div class="main">
-            <div class="input-group mb-3">
-                <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                <input type="text" class="form-control" placeholder="이메일" aria-label="Username">
-                <span class="input-group-text">@</span>
-                <input type="text" class="form-control" placeholder="datahub.com" aria-label="Server">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                <input type="text" class="form-control" placeholder="비밀번호" aria-label="Username"
-                       aria-describedby="basic-addon1">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                <input type="text" class="form-control" placeholder="비밀번호재확인" aria-label="Username"
-                       aria-describedby="basic-addon1">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text"><i class="fas fa-user"></i></span>
-                <input type="text" class="form-control" placeholder="닉네임" aria-label="Username"
-                       aria-describedby="basic-addon1">
-            </div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-primary" type="button">가입하기</button>
-                <button class="btn btn-danger" type="button" onclick="location.href='index.html'">돌아가기</button>
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-lg-6 mx-auto">
+            <div class="alert alert-secondary" role="alert">
+                <h2>회원가입</h2>
+                <div class="main">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                        <input type="text" class="form-control" placeholder="이메일" aria-label="Username">
+                        <span class="input-group-text">@</span>
+                        <input type="text" class="form-control" placeholder="datahub.com" aria-label="Server">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                        <input type="text" class="form-control" placeholder="비밀번호" aria-label="Username"
+                               aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                        <input type="text" class="form-control" placeholder="비밀번호재확인" aria-label="Username"
+                               aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        <input type="text" class="form-control" placeholder="닉네임" aria-label="Username"
+                               aria-describedby="basic-addon1">
+                    </div>
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                        <button class="btn btn-primary" type="button">가입하기</button>
+                        <button class="btn btn-danger" type="button" onclick="location.href='index.html'">돌아가기</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+</div>
 </container>
 <footer>
 
