--- a/hyeonjeong/api_list.html
+++ b/hyeonjeong/api_list.html
@@ -16,7 +16,7 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    
+
     <!--    CSS Link-->
     <link rel="stylesheet" href="css/api_list.css">
 </head>
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-10">
                 <div class="col-12">
-                     <!-- API-search(input_box) -->
+                    <!-- API-search(input_box) -->
                     <div class="row">
                         <h4 class="big-tit page-title"><strong>| API목록 및 조회 |</strong></h4>
                         <div class="api-search">
@@ -34,7 +34,7 @@
                             <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
                         </div>
                     </div>
-                    
+
                     <!-- API-result(number) -->
                     <div class="row">
                         <strong class="search-result">
@@ -201,7 +201,9 @@
                         <h6 class="big-tit"><strong>API 목록</strong></h6>
                         <ul class="ul-wrapper">
                             <li class="api-list">
-                                <a href="#"><div class="api-title">제목</div></a>
+                                <a href="#">
+                                    <div class="api-title">제목</div>
+                                </a>
                                 <div class="api-content">간단 설명</div>
                                 <div class="d-flex justify-content-start">
                                     <!-- api-data에 들어가있는 값은 '예시' -->
