--- a/jsjs/login.html
+++ b/jsjs/login.html
@@ -20,9 +20,9 @@
     <style>
         @media screen and (max-width: 768px) {
             .alert-secondary {
-                top: 0px;
-                height: 100vh;
-            }
+            /*    top: 0px;*/
+            /*    !*height: 100vh;*!*/
+            /*}*/
         }
 
 
