--- a/jsjs/register.html
+++ b/jsjs/register.html
@@ -20,8 +20,8 @@
     <style>
         @media screen and (max-width: 768px) {
             .alert-secondary {
-                top: 0px;
-                height: 100vh;
+                /*top: 0px;*/
+                /*height: 100vh;*/
             }
         }
     </style>
