--- a/jsjs/index.html
+++ b/jsjs/index.html
@@ -27,16 +27,6 @@
             background-color: #f0f0f0;
             /*cursor: move;*/
         }
-
-        /*.dg{*/
-        /*    display: none;*/
-        /*}*/
-
-        @media screen and (max-width: 768px) {
-            #category_main {
-                margin-top: 0px !important;
-            }
-        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
@@ -225,7 +215,7 @@
 
         requestAnimationFrame(animate);
         controll.drawing(0);
-
+        ctx.lineCap = "round";
     }
 
 
