--- a/jsjs/index.html
+++ b/jsjs/index.html
@@ -34,13 +34,8 @@
             /*cursor: move;*/
         }
     </style>
-
-
-
-    <!--    CSS Link-->
-    <link rel="stylesheet" href="css/index.css">
 </head>
-<body>
+<body class="vh-100">
 <div th:replace="fragments/header.html :: fragment-header"></div>
 <div class="container mt-3">
     <div class="row">
