--- a/jsjs/user/mypage.html
+++ b/jsjs/user/mypage.html
@@ -15,7 +15,6 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-<!--    <link rel="stylesheet" href="../css/mypage.css">-->
 </head>
 <body>
 <!--헤더부분-->
@@ -119,7 +118,7 @@
                                 <h6 class="mb-0">비밀번호변경</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
-                                <div class="input-group mb-3">
+                                <div class="input-group">
                                     <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                     <input type="text" class="form-control" placeholder="비밀번호" aria-label="Username"
                                            aria-describedby="basic-addon1">
@@ -132,7 +131,7 @@
                                 <h6 class="mb-0">비밀번호2차확인</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
-                                <div class="input-group mb-3">
+                                <div class="input-group">
                                     <span class="input-group-text"><i class="fas fa-lock"></i></span>
                                     <input type="text" class="form-control" placeholder="비밀번호" aria-label="Username"
                                            aria-describedby="basic-addon1">
