--- a/BU/DataList_02.html
+++ b/BU/DataList_02.html
@@ -291,10 +291,10 @@
                 <div class="row">
                     <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="DataList.html">전체데이터</a>
+    <a class="nav-link"href="DataList.html">전체데이터</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="DataList_02.html">파일데이터</a>
+    <a class="nav-link active" aria-current="page" href="DataList_02.html">파일데이터</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="DataList_03.html">오픈데이터</a>
