--- a/jsjs/user/mypage.html
+++ b/jsjs/user/mypage.html
@@ -99,9 +99,9 @@
                     <div class="col-12 col-lg-6">
                         <div class="card mb-3">
                             <div class="card-body">
-                                <div class="row">
+                                <div class="row mb-3">
                                     <div class="col-sm-4 align-self-center">
-                                        <h6 class="mb-0">닉네임</h6>
+                                        <h6 class="mb-2">닉네임</h6>
                                     </div>
                                     <div class="col-sm-8 text-secondary">
                                         <div class="input-group">
@@ -111,17 +111,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
                                 <div class="row">
                                     <div class="col-sm-4 align-self-center">
-                                        <h6 class="mb-0">이메일</h6>
+                                        <h6 class="mb-2">이메일</h6>
                                     </div>
                                     <div class="col-sm-8 text-secondary">
                                         <div class="input-group">
                                             <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                                             <input type="text" class="form-control" value="test@datahub.com"
                                                    aria-label="Username" readonly>
-
                                         </div>
                                     </div>
                                 </div>
@@ -132,28 +130,28 @@
                     <div class="col-12 col-lg-6">
                         <div class="card mb-3">
                             <div class="card-body">
-                                <div class="row">
+                                <div class="row mb-3">
                                     <div class="col-sm-4 align-self-center">
-                                        <h6 class="mb-0">비밀번호변경</h6>
+                                        <h6 class="mb-2">비밀번호변경</h6>
                                     </div>
                                     <div class="col-sm-8 text-secondary">
                                         <div class="input-group">
                                             <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                                            <input type="text" class="form-control" placeholder="비밀번호"
+                                            <input type="password" class="form-control" placeholder="비밀번호"
                                                    aria-label="Username"
                                                    aria-describedby="basic-addon1">
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
+
                                 <div class="row">
                                     <div class="col-sm-4 align-self-center">
-                                        <h6 class="mb-0">재확인</h6>
+                                        <h6 class="mb-2">재확인</h6>
                                     </div>
                                     <div class="col-sm-8 text-secondary">
                                         <div class="input-group">
                                             <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                                            <input type="text" class="form-control" placeholder="재확인"
+                                            <input type="password" class="form-control" placeholder="재확인"
                                                    aria-label="Username"
                                                    aria-describedby="basic-addon1">
                                         </div>
